--- a/frontend/package.json
+++ b/frontend/package.json
@@ -2,6 +2,7 @@
   "name": "moody-socials-frontend",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://jens1101.github.io/moody-socials",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.3",
