--- a/backend/package.json
+++ b/backend/package.json
@@ -1,9 +1,9 @@
 {
   "name": "moody-socials-backend",
   "version": "1.0.0",
-  "main": "server.js",
+  "main": "index.js",
   "scripts": {
-    "start": "nodemon server.js"
+    "start": "nodemon index.js"
   },
   "repository": {
     "type": "git",
@@ -23,14 +23,14 @@
     "util.promisify": "^1.0.0",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
-    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "sentiment": "^5.0.1",
     "twit": "^2.2.5",
     "twitter-lite": "^0.11.0"
   },
   "devDependencies": {
-    "nodemon": "^2.0.7"
+    "nodemon": "^2.0.7",
+    "dotenv": "^8.2.0"
   },
   "description": ""
 }
